apps/gatekeeper-0.2.2/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-echo
